# coxswain

./: .dockerignore  .gateway-api-versions.json  .gitignore  .trivyignore  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.ci  Dockerfile.e2e  LICENSE  NOTICE  README.md  RELEASE.md  ROADMAP.md  clippy.toml  deny.toml  mkdocs.yml  release.toml
coxswain-bin/: Cargo.toml
coxswain-bin/src/: main.rs
coxswain-controller/: Cargo.toml
coxswain-controller/src/: controller.rs  endpoints.rs  gateway_api.rs  ingress.rs  lib.rs  reconciler.rs  watcher.rs
coxswain-proxy/: Cargo.toml
coxswain-proxy/src/: engine.rs  filter.rs  health.rs  lib.rs
crates/coxswain-admin/: Cargo.toml  openapi.yaml
crates/coxswain-admin/src/: aggregator.rs  events.rs  gw_types.rs  lib.rs  logs.rs  page.rs  routes_dto.rs
crates/coxswain-admin/src/aggregator/: controllers.rs  gateways.rs  ingresses.rs  manifests.rs  mod.rs  pod_logs.rs  problems.rs  proxies.rs  route_check.rs  routing.rs  topology.rs
crates/coxswain-bin/: Cargo.toml
crates/coxswain-bin/src/: args.rs  args_tests.rs  discovery.rs  hot_reload.rs  lib.rs  main.rs  services.rs  wiring.rs
crates/coxswain-bin/src/roles/: controller.rs  mod.rs  proxy.rs  relay.rs
crates/coxswain-cache/: Cargo.toml
crates/coxswain-cache/src/: lib.rs  metrics.rs
crates/coxswain-controller/: Cargo.toml
crates/coxswain-controller/src/: backend_tls.rs  controller.rs  endpoints.rs  gateway_api.rs  gw_types.rs  ingress.rs  k8s_utils.rs  keys.rs  kube_helpers.rs  lib.rs  metrics.rs  ownership.rs  reconciler.rs  status_common.rs  status_writer.rs  tls.rs  translate.rs
crates/coxswain-controller/src/controller/: backend_tls_events.rs  backend_tls_policy_status.rs  client_traffic_policy_events.rs  conditions.rs  config.rs  coxswain_backend_policy_events.rs  coxswain_external_auth_events.rs  gateway_class_events.rs  gateway_class_status.rs  gateway_events.rs  gateway_status.rs  gatewayclass_events.rs  grpc_route_events.rs  ingress_event_recorder.rs  ingress_events.rs  ingress_status.rs  leader_label.rs  listenerset_events.rs  listenerset_status.rs  mod.rs  overrides.rs  route_events.rs  tcp_route_events.rs  tls_route_events.rs  udp_route_events.rs
crates/coxswain-controller/src/gateway_api/: backend_tls.rs  bindings.rs  filters.rs  hostnames.rs  mod.rs  reconcile.rs  status.rs  tests.rs  timeouts.rs
crates/coxswain-controller/src/identity/: ca.rs  mod.rs  publisher.rs  reject_hook.rs  store.rs  token_review.rs
crates/coxswain-controller/src/ingress/: backend.rs  class.rs  mod.rs  ports.rs  reconcile.rs  tls.rs
crates/coxswain-controller/src/operator/: apply.rs  condition.rs  merge.rs  mod.rs  params.rs  rbac.rs  reconciler.rs  relay_autoscaler.rs  relay_converge.rs  relay_params.rs  relay_reconcile.rs  render.rs  render_relay.rs  render_shared.rs  render_shared_proxy.rs  shared_alloc.rs  shared_install.rs  status.rs  vip.rs
crates/coxswain-controller/src/status_common/: addresses.rs  mod.rs
crates/coxswain-controller/src/tests/: endpoints.rs  mod.rs  reconciler.rs
crates/coxswain-core/: Cargo.toml
crates/coxswain-core/benches/: routing.rs
crates/coxswain-core/examples/: crdgen.rs
crates/coxswain-core/src/: cluster.rs  dedicated_registry.rs  endpoints.rs  fleet.rs  gateway_api_capability.rs  health.rs  identity.rs  lib.rs  listener_health.rs  listener_status.rs  naming.rs  node_registry.rs  ownership.rs  publish_index.rs  reference_grants.rs  routing.rs  shared.rs  source.rs  tls.rs  workqueue.rs
crates/coxswain-core/src/crd/: basic_auth.rs  client_traffic_policy.rs  compression.rs  coxswain_backend_policy.rs  coxswain_external_auth.rs  gateway_parameters.rs  ingress_parameters.rs  ip_access_control.rs  jwt_auth.rs  mod.rs  path_rewrite_regex.rs  rate_limit.rs  relay_policy.rs  request_size_limit.rs  retry_policy.rs
crates/coxswain-core/src/routing/: builder.rs  entry.rs  gateway.rs  host_router.rs  ingress.rs  mod.rs  passthrough.rs  predicate.rs  tcp.rs  tests.rs  udp.rs
crates/coxswain-core/src/tests/: cluster.rs  gateway_parameters.rs  health.rs  mod.rs  ownership.rs  reference_grants.rs  tls.rs
crates/coxswain-discovery/: Cargo.toml  build.rs
crates/coxswain-discovery/benches/: delta_apply.rs  relay_apply.rs  relay_fanout.rs
crates/coxswain-discovery/src/: apply.rs  auth.rs  bootstrap_client.rs  bootstrap_server.rs  client.rs  error.rs  lib.rs  materialize.rs  metrics.rs  proto.rs  registry.rs  relay.rs  server.rs  subscription.rs  svid.rs  transport.rs  upstream.rs  version.rs  wire.rs
crates/coxswain-discovery/src/server/: authz.rs  mod.rs  source.rs  stream.rs  view_cache.rs
crates/coxswain-discovery/src/tests/: mod.rs  scope_binding.rs
crates/coxswain-discovery/src/wire/: mod.rs  (+8 more)
crates/coxswain-e2e/: Cargo.toml
crates/coxswain-e2e/src/: fixtures.rs  jwt.rs  lib.rs
crates/coxswain-e2e/tests/: dedicated_gateway.rs  dedicated_proxy.rs  discovery.rs  gateway_api.rs  health.rs  ingress.rs  observability.rs  provisioning.rs  provisioning_rbac.rs  proxy_hot_reconfig.rs  proxy_listener_drain.rs  rbac_read_only_proxy.rs  resilience.rs  routing.rs  security.rs  status_conditions.rs  tls.rs  traffic_policy.rs
crates/coxswain-health/: Cargo.toml
crates/coxswain-health/src/: lib.rs
crates/coxswain-proxy/: Cargo.toml
crates/coxswain-proxy/benches/: proxy_path.rs
crates/coxswain-proxy/src/: accept.rs  auth.rs  circuit_breaker.rs  config.rs  ctx.rs  filter.rs  gateway.rs  hooks.rs  ingress.rs  lib.rs  metrics.rs  proxy.rs  rate_limit.rs  reflector.rs  retry.rs  source.rs  tls.rs  upstream_ca.rs  upstream_tls.rs
crates/coxswain-proxy/tests/: alloc_budget.rs
crates/coxswain-reflector/: Cargo.toml
crates/coxswain-reflector/benches/: convergence.rs
crates/coxswain-reflector/src/: capabilities.rs  cluster.rs  crds.rs  duration.rs  endpoints.rs  fingerprint.rs  gw_types.rs  jwks.rs  k8s_utils.rs  keys.rs  lib.rs  merged_store.rs  metrics.rs  port_alloc.rs  reconciler.rs  reference_grants.rs  status.rs  status_queue.rs  tls.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+959 files in other folders)
