[workspace]
resolver = "2"
members = [
    "crates/coxswain-bin",
    "crates/coxswain-cache",
    "crates/coxswain-core",
    "crates/coxswain-controller",
    "crates/coxswain-proxy",
    "crates/coxswain-reflector",
    "crates/coxswain-health",
    "crates/coxswain-admin",
    "crates/coxswain-e2e"
]
default-members = [
    "crates/coxswain-bin",
    "crates/coxswain-cache",
    "crates/coxswain-core",
    "crates/coxswain-controller",
    "crates/coxswain-proxy",
    "crates/coxswain-reflector",
    "crates/coxswain-health",
    "crates/coxswain-admin"
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Matteo Giaccone"]
description = "A pure-Rust Kubernetes Ingress & Gateway API Controller built on Pingora"
homepage = "https://github.com/coxswain-labs/coxswain"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/coxswain-labs/coxswain"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["kubernetes", "ingress", "gateway-api", "pingora", "proxy"]

[workspace.dependencies]
coxswain-admin      = { path = "./crates/coxswain-admin" }
coxswain-cache      = { path = "./crates/coxswain-cache" }
coxswain-core       = { path = "./crates/coxswain-core" }
coxswain-controller = { path = "./crates/coxswain-controller" }
coxswain-health     = { path = "./crates/coxswain-health" }
coxswain-proxy      = { path = "./crates/coxswain-proxy" }
coxswain-reflector  = { path = "./crates/coxswain-reflector" }

anyhow             = { version = "1.0" }
arc-swap           = { version = "1.9" }
async-trait        = { version = "0.1" }
base64             = { version = "0.22" }
bytes              = { version = "1" }
clap               = { version = "4.6", features = ["derive", "env"] }
criterion          = { version = "0.8", features = ["html_reports"] }
form_urlencoded    = { version = "1.2" }
governor           = { version = "0.10", default-features = false, features = ["std", "dashmap"] }
futures            = { version = "0.3" }
gateway-api        = { version = "0.21" }
http               = { version = "1" }
humantime          = { version = "2" }
ipnet              = { version = "2" }
itoa               = { version = "1" }
# Enable the "experimental" feature to expose alpha Gateway API resources
# (GRPCRoute, TCPRoute, BackendTLSPolicy, etc.) and experimental fields on
# stable CRDs. This feature is for contributor/CI/preview builds ONLY —
# release images are always built without it. See docs/guides/gateway-api.md.
k8s-openapi        = { version = "0.27", features = ["latest", "schemars"] }
# `unstable-runtime` exposes the shared-store API (`store_shared`,
# `Writer::subscribe`, `Controller::for_shared_stream`) the controller's
# status-writer uses to drive its reconcile work-queues off the reflector's
# informers without duplicating watches (#347). It is an unstable kube surface
# pinned to the 3.1 line (kube 4 is currently blocked by gateway-api lacking a
# kube-4 release).
kube               = { version = "3.1", features = ["runtime", "derive", "client", "unstable-runtime"] }
kube-leader-election = { version = "0.43" }
matchit            = { version = "0.9" }
nix                = { version = "0.31", features = ["signal", "process"] }
pingora            = { version = "0.8", default-features = false }
pingora-cache      = { version = "0.8", default-features = false }
pingora-core       = { version = "0.8", default-features = false }
pingora-http       = { version = "0.8" }
pingora-proxy      = { version = "0.8", default-features = false }
prometheus         = { version = "0.14" }
rcgen              = { version = "0.14" }
regex              = { version = "1.12" }
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls             = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars           = { version = "1.2" }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1.0" }
serde_yaml         = { version = "0.9" }
smallvec           = { version = "1.13", features = ["union"] }
static_assertions  = { version = "1.1" }
tempfile           = { version = "3" }
thiserror          = { version = "2.0" }
tokio              = { version = "1", features = ["full"] }
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tokio-tungstenite  = { version = "0.29" }
tracing            = { version = "0.1" }
x509-parser        = { version = "0.18" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-test       = { version = "0.2" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
correctness     = { level = "deny", priority = -1 }
suspicious      = { level = "warn", priority = -1 }
style           = { level = "warn", priority = -1 }
complexity      = { level = "warn", priority = -1 }
perf            = { level = "warn", priority = -1 }
pedantic        = { level = "allow", priority = -1 }
type_complexity = "deny"
unwrap_used     = "deny"
expect_used     = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
