[workspace]
resolver = "2"
members = [
    "crates/coxswain-bin",
    "crates/coxswain-core",
    "crates/coxswain-controller",
    "crates/coxswain-discovery",
    "crates/coxswain-proxy",
    "crates/coxswain-reflector",
    "crates/coxswain-health",
    "crates/coxswain-admin",
    "crates/coxswain-e2e",
    "crates/gateway-api-types",
    "xtask"
]
default-members = [
    "crates/coxswain-bin",
    "crates/coxswain-core",
    "crates/coxswain-controller",
    "crates/coxswain-discovery",
    "crates/coxswain-proxy",
    "crates/coxswain-reflector",
    "crates/coxswain-health",
    "crates/coxswain-admin",
    "crates/gateway-api-types"
]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Matteo Giaccone"]
description = "A pure-Rust Kubernetes Ingress & Gateway API Controller built on Pingora"
homepage = "https://github.com/coxswain-labs/coxswain"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/coxswain-labs/coxswain"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["kubernetes", "ingress", "gateway-api", "pingora", "proxy"]

[workspace.dependencies]
coxswain-admin      = { path = "./crates/coxswain-admin" }
coxswain-core       = { path = "./crates/coxswain-core" }
coxswain-controller = { path = "./crates/coxswain-controller" }
coxswain-discovery  = { path = "./crates/coxswain-discovery" }
coxswain-health     = { path = "./crates/coxswain-health" }
coxswain-proxy      = { path = "./crates/coxswain-proxy" }
coxswain-reflector  = { path = "./crates/coxswain-reflector" }

anyhow             = { version = "1.0" }
arc-swap           = { version = "1.9" }
async-trait        = { version = "0.1" }
base64             = { version = "0.22" }
bcrypt             = { version = "0.19" }
constant_time_eq   = { version = "0.5" }
bytes              = { version = "1" }
clap               = { version = "4.6", features = ["derive", "env"] }
criterion          = { version = "0.8", features = ["html_reports"] }
failsafe           = { version = "1.3" }
flate2             = { version = "1" }
# Pre-generated Envoy protobuf types (envoy.service.auth.v3) for the gRPC
# ext_authz transport (#23). Tracks tonic 0.14 / prost 0.14 exactly — avoids
# vendoring the full Envoy + xDS + udpa proto closure.
envoy-types        = { version = "0.7" }
form_urlencoded    = { version = "1.2" }
governor           = { version = "0.10", default-features = false, features = ["std", "dashmap"] }
futures            = { version = "0.3" }
# First-party kopium-generated bindings (#510). Regenerate with
# `cargo run -p xtask -- gateway-api-types`; see the repo-root xtask crate.
gateway-api-types  = { path = "./crates/gateway-api-types" }
http               = { version = "1" }
humantime          = { version = "2" }
ipnet              = { version = "2" }
itoa               = { version = "1" }
dashmap            = { version = "6.2.1" }
# Pinned to v1_36 (Kubernetes 1.36 types). The compiled API version is decoupled
# from the minimum supported cluster — our floor is 1.30+ (VAP GA). See
# docs/src/installation/index.md.
k8s-openapi        = { version = "0.28", features = ["v1_36", "schemars"] }
# `unstable-runtime` exposes the shared-store API (`store_shared`,
# `Writer::subscribe`, `Controller::for_shared_stream`) the controller's
# status-writer uses to drive its reconcile work-queues off the reflector's
# informers without duplicating watches (#347). This API remains unstable in
# kube 4 (still gated behind `unstable-runtime-subscribe` in kube-runtime).
kube               = { version = "4.0", features = ["runtime", "derive", "client", "unstable-runtime"] }
kube-leader-election = { version = "0.44" }
matchit            = { version = "0.9" }
nix                = { version = "0.31", features = ["signal", "process"] }
parking_lot        = { version = "0.12" }
percent-encoding   = { version = "2.3" }
ppp                = { version = "2.3" }
pingora            = { version = "0.8", default-features = false }
pingora-core       = { version = "0.8", default-features = false }
pingora-http       = { version = "0.8" }
pingora-proxy      = { version = "0.8", default-features = false }
prometheus         = { version = "0.14" }
prost              = { version = "0.14" }
protox             = { version = "0.9" }
rand               = { version = "0.10.1" }
rcgen              = { version = "0.14", features = ["x509-parser"] }
regex              = { version = "1.12" }
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
sha1               = { version = "0.11", default-features = false }
sha2               = { version = "0.11", default-features = false }
zeroize            = { version = "1", features = ["derive"] }
rustls             = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
schemars           = { version = "1.2" }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1.0" }
serde_yaml         = { version = "0.9" }
smallvec           = { version = "1.13", features = ["union"] }
static_assertions  = { version = "1.1" }
tempfile           = { version = "3" }
thiserror          = { version = "2.0" }
tls-parser         = { version = "0.12" }
time               = { version = "0.3" }
tokio              = { version = "1", features = ["full"] }
tokio-rustls       = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-stream       = { version = "0.1", features = ["sync"] }
tokio-util         = { version = "0.7", features = ["rt"] }
tokio-tungstenite  = { version = "0.29" }
tonic              = { version = "0.14" }
tonic-prost        = { version = "0.14" }
tonic-prost-build  = { version = "0.14" }
tracing            = { version = "0.1" }
x509-parser        = { version = "0.18" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-test       = { version = "0.2" }
ureq               = { version = "3" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
correctness     = { level = "deny", priority = -1 }
suspicious      = { level = "warn", priority = -1 }
style           = { level = "warn", priority = -1 }
complexity      = { level = "warn", priority = -1 }
perf            = { level = "warn", priority = -1 }
pedantic        = { level = "allow", priority = -1 }
type_complexity = "deny"
unwrap_used     = "deny"
expect_used     = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
