[package]
name = "coxswain-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[[bin]]
name = "coxswain"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
coxswain-core = { workspace = true }
coxswain-admin = { workspace = true }
coxswain-controller = { workspace = true }
coxswain-health = { workspace = true }
coxswain-proxy = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }