[package]
name = "coxswain-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
arc-swap = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
coxswain-core = { workspace = true }
futures = { workspace = true }
gateway-api = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
pingora-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
