[package]
name = "coxswain-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
coxswain-core = { workspace = true }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true }
tracing = { workspace = true }
