[package]
name = "coxswain-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait   = { workspace = true }
coxswain-core = { workspace = true }
http          = { workspace = true }
pingora-core  = { workspace = true }
prometheus    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
