[package]
name = "coxswain-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait   = { workspace = true }
bytes         = { workspace = true }
coxswain-core = { workspace = true }
futures       = { workspace = true }
gateway-api   = { workspace = true }
http          = { workspace = true }
k8s-openapi   = { workspace = true }
kube          = { workspace = true }
pingora-core  = { workspace = true }
pingora-http  = { workspace = true }
prometheus    = { workspace = true }
reqwest       = { workspace = true }
rustls        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
