[package]
name = "coxswain-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Expose alpha Gateway API resources and experimental fields. For contributor/CI
# use only — never enabled in release builds. See docs/guides/gateway-api.md.
experimental = ["gateway-api/experimental"]

[dependencies]
tracing = { workspace = true }
async-trait = { workspace = true }
coxswain-core = { workspace = true }
coxswain-reflector = { workspace = true }
futures = { workspace = true }
gateway-api = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-leader-election = { workspace = true }
pingora-core = { workspace = true }
prometheus = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }

