[package]
name = "coxswain-controller"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Expose alpha Gateway API resources and experimental fields. For contributor/CI
# use only — never enabled in release builds. See docs/guides/gateway-api.md.
experimental = ["coxswain-reflector/experimental"]

[dependencies]
tracing = { workspace = true }
async-trait = { workspace = true }
coxswain-core = { workspace = true }
coxswain-discovery = { workspace = true }
coxswain-reflector = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-leader-election = { workspace = true }
parking_lot = { workspace = true }
pingora-core = { workspace = true }
prometheus = { workspace = true }
rcgen = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
tracing-test = { workspace = true }
x509-parser = { workspace = true }

