[package]
name = "coxswain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arc-swap         = { workspace = true }
form_urlencoded  = { workspace = true }
http             = { workspace = true }
matchit          = { workspace = true }
regex            = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }