[package]
name = "coxswain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arc-swap             = { workspace = true }
form_urlencoded      = { workspace = true }
http                 = { workspace = true }
matchit              = { workspace = true }
regex                = { workspace = true }
serde                = { workspace = true, features = ["rc"] }
smallvec             = { workspace = true }
static_assertions    = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }

[dev-dependencies]
criterion    = { workspace = true }
serde_json   = { workspace = true }
tracing-test = { workspace = true }

[[bench]]
name = "routing"
harness = false