[package]
name = "coxswain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arc-swap             = { workspace = true }
tokio                = { workspace = true, features = ["sync", "time"] }
form_urlencoded      = { workspace = true }
http                 = { workspace = true }
ipnet                = { workspace = true }
k8s-openapi          = { workspace = true }
kube                 = { workspace = true }
matchit              = { workspace = true }
parking_lot          = { workspace = true }
regex                = { workspace = true }
schemars             = { workspace = true }
serde                = { workspace = true, features = ["rc"] }
serde_json           = { workspace = true }
smallvec             = { workspace = true }
static_assertions    = { workspace = true }
thiserror            = { workspace = true }
tracing              = { workspace = true }
zeroize              = { workspace = true }

[dev-dependencies]
criterion    = { workspace = true }
serde_yaml   = { workspace = true }
tracing-test = { workspace = true }
# `test-util` for the workqueue's paused-clock tests (`start_paused`); `macros`
# + `rt` for `#[tokio::test]` when the crate is tested in isolation.
tokio        = { workspace = true, features = ["test-util", "macros", "rt"] }

[[bench]]
name = "routing"
harness = false
