[package]
name = "coxswain-discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait   = { workspace = true }
coxswain-core = { workspace = true }
http          = { workspace = true }
ipnet         = { workspace = true }
prost         = { workspace = true }
regex         = { workspace = true }
sha2          = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
tonic         = { workspace = true }
tonic-prost   = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tokio         = { workspace = true }

[build-dependencies]
protox            = { workspace = true }
tonic-prost-build = { workspace = true }

[package.metadata.cargo-machete]
# prost + tonic-prost: used only by the generated code included via
# `tonic::include_proto!` in src/proto.rs — machete cannot see into OUT_DIR.
ignored = ["prost", "tonic-prost"]
