[package]
name = "coxswain-e2e"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
publish = false

[lib]
name = "coxswain_e2e"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ipnet.workspace = true
nix.workspace = true
futures.workspace = true
base64.workspace = true
gateway-api.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
rcgen.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
